# transmute-core

./: .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  example.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  ubuild.py  uranium
.github/worfklows/: test.yml
.github/workflows/: python-package.yaml
docs/: 01_tutorial.md  Makefile  api.rst  authoring_a_toolbox.rst  autodocumentation.rst  changelog.rst  conf.py  contentype_serialization.rst  context.rst  contributing-a-framework.md  creating_a_framework.rst  function.md  function.rst  function_signatures.rst  functions.rst  index.md  index.rst  make.bat  object_serialization.rst  requirements.txt  response.rst  routes.rst  serialization.md  serialization.rst  tutorial.rst
docs/advanced/: creating_a_framework.rst  index.rst
docs/api/: contenttype_serializers.rst  index.rst
docs/authoring/: caveats.rst
docs/frameworks/: aiohttp.rst  flask.rst  index.rst
docs/guide/: index.rst
docs_3/: Makefile  api.rst  function.rst  install.rst  serialization.rst
transmute_core/: __init__.py  compat.py  context.py  decorators.py  exceptions.py  function.py  handler.py  param_extractor.py  patterns.py  response_shape.py  schematics_serializer.py  signature.py
transmute_core/attributes/: __init__.py  response_type.py
transmute_core/framework/: __init__.py  (+1 more)
web_transmute/: __init__.py  compat.py  decorators.py  exceptions.py  function.py  schematics_serializer.py  serializer_cache.py  signature.py
(+104 files in other folders)
