[metadata]
name = transmute-core
author = Yusuke Tsutsumi
description = a utility library to help provide api route generation form function signature for web frameworks.
long_description = file: README.rst
url = https://github.com/toumorokoshi/transmute-core
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2

[options]
include_package_data = true
zip_safe = true
packages = find:
install_requires =
    attrs>=17.3.0
    cattrs>=0.9.0
    jsonschema-extractor>=0.6.0
    schematics>=2.0.0
    six
    swagger-schema>=0.5.1
    pyyaml >= 5
    typing; python_version < '3.5'
    singledispatch; python_version < '3.4'

[options.extras_require]
test =
    aiohttp; python_version > '3'
    babel
    flask
    mock
    pydantic; python_version > '3'
    pytest-aiohttp; python_version > '3'
    pytest-benchmark
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    sphinxcontrib-programoutput
    tornado